--- a/src/containers/CartContainer/CartContainer.css
+++ b/src/containers/CartContainer/CartContainer.css
@@ -1,10 +1,18 @@
+.divCarritoVacio{
+    margin-top: 90px;
+    color: #ffff;
+}
+
 .containerCarrito{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     background-color: #fff;
-    margin: 5% 10%;
+    width: 900px;
+    margin: 90px auto 0 auto;
     padding: 0 0 15px 0;
     border-radius: 4px;
 }
-
 .carritoVacio{
     height: 80vh;
     display: flex;
@@ -21,12 +29,14 @@
 }
 
 .checkOut{
+    color: #0000;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
 }
 
 .idCompra{
+    color: #0000;
     margin: 5% 30% 0 30%;
     background-color: #fff;
     border-radius: 4px;
