--- a/src/containers/ItemDetailContainer/ItemDetailContainer.css
+++ b/src/containers/ItemDetailContainer/ItemDetailContainer.css
@@ -1,5 +1,8 @@
 .containerItemDetail{
     background-color: #fff;
-    margin: 5% 10%;
+    width: 70%;
+    margin-top: 130px;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 4px;
 }
